<resources>
    <string name="app_name">forage_task3</string>
    <string name="stub_md">Sample Text</string>
    <string name="flight_info">Flight: AI-302</string>
    <string name="departure_info">Departure: JFK</string>
    <string name="departure_time">Time: 10:00 AM</string>
    <string name="arrival_info">Arrival: LAX</string>
    <string name="arrival_time">Time: 1:30 PM</string>
</resources>



